# road-crack-detection

./: .gitignore  GLCM_FEATURE_EXTRACTION.ipynb  README.md  app.py  glcm.py  pyproject.toml  requirements.txt
client/: README.md
mayan/: .gitignore  README.md  app.py  requirements.txt
model/: glcm_model_scaler.pkl
models/: scaler_glcm.pkl
scripts/: train_model.py
