[project]
name = "road-crack-detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.28.0",
    "tensorflow>=2.20.0",
]
